[config file]: fix postprocessor class name

--- a/python/config_files/config2.json
+++ b/python/config_files/config2.json
@@ -55,7 +55,7 @@
 		},
 		"postprocessor":
                 {
-			"name":"PostprocessorBRATS2",
+			"name":"PostprocessorBRATSForCNN12",
                         "arguments":
 			{
                         }
